# claude-memory

./: .dockerignore  .mcp.json  ARCHITECTURE.md  BENCHMARKS.md  PAPERS.md  PLAN.md  PLAN_AGENT_DISPATCH.md  PLAN_GLOBAL_MEMORY.md  PLAN_LLM_INDEX.md  PLAN_SESSION_INDEX.md  PLAN_SUBAGENT_FILTER.md  PROMPTS.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
benchmarks/: longmemeval_lite.py
hooks/: clear_ingest.sh  hooks.json  memory-check-reset.sh  memory-check.sh  session_start_index.py  start_mcp.sh
src/claude_memory/: __main__.py  cli.py  config.py  extractor.py  index_builder.py  ingest.py  keyword_canonicalizer.py  parser.py  query.py  retrieval.py  server.py  store.py  trajectories.py
tests/: static_check.py
tests/deploy/: Dockerfile.fedora  Dockerfile.ubuntu24  run_in_container.sh
tests/smoke/: test_hooks.py  test_index_curator.py  test_mcp_handshake.py
